crates/lang/macro/tests/ui/blake2b/fail/invalid_parameter_variable.stderr
error: expected string or byte string literal as input: expected literal
 --> $DIR/invalid_parameter_variable.rs:4:38
  |
4 | const _: [u8; 32] = ink::blake2x256!(INPUT);
  |                                      ^^^^^
